--- a/config.json
+++ b/config.json
@@ -26,12 +26,12 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "𝙲𝚑𝚒𝚗𝚐𝚊𝚛𝚒🔥",
-    "PREFIX": "+",
+    "PREFIX": ".",
     "OTHERBOT": [
         ""
     ],
     "UNSENTVIP": [
-        "100038374310301",
+        "61557122355666",
         "100089747292304",
         "100057959767370",
         "",
@@ -40,12 +40,12 @@
         "100086141860679"
     ],
     "GOD": [
-        "100040426712109",
+        "61557122355666",
         "100089747292304",
         "100057959767370"
     ],
     "ADMINBOT": [
-        "100040426712109",
+        "61557122355666",
         "",
         "",
         "",
