--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Ali Jan",
+    "BOTNAME": "Aʅι Jαɳ",
     "PREFIX": ".",
     "OTHERBOT": [
         ""
