--- a/config.json
+++ b/config.json
@@ -55,7 +55,7 @@
         "100064584243077",
         "100093221656574"
     ],
-    "OWNER": "ℙ𝕒𝕘𝕒𝕝 𝕔𝕙𝕠𝕣𝕒",
+    "OWNER": "Ali Jan",
     "AGE": "21",
     "GENDER": "𝗠𝗮𝗟𝗲",
     "FACEBOOK": "https://https://www.facebook.com/pagalchora143?mibextid=ZbWKwL?id=100038374310301",
