--- a/config.json
+++ b/config.json
@@ -58,7 +58,7 @@
     "OWNER": "Ali Jan",
     "AGE": "21",
     "GENDER": "𝗠𝗮𝗟𝗲",
-    "FACEBOOK": "https://https://www.facebook.com/pagalchora143?mibextid=ZbWKwL?id=100038374310301",
+    "FACEBOOK": "https://https://www.facebook.com/pagalchhora143?mibextid=ZbWKwL?id=100038374310301",
     "AutoOffBot": "disable",
     "AutoOffBotStartSleep": "disable",
     "AutoOffBotSendMessage": "Bye everyone. i need to sleep i'll be right back at 5:00AM 🥰",
