--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "Aʅι Jαɳ",
-    "PREFIX": ".",
+    "PREFIX": "/",
     "OTHERBOT": [
         ""
     ],
