--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
         "key": "sb",
@@ -14,17 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
         "key": "ps_l",
@@ -41,44 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x668",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
-    },
-    {
-        "key": "fr",
-        "value": "00vSHBDf2JX353j2b.AWU_i5k-jp5_U21GJHrcDiyoy7c.BmE5t-..AAA.0.0.BmE5vj.AWV960PMLmA",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100091958496925",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
-    },
-    {
-        "key": "xs",
-        "value": "34%3AVrMNr1ApPhn6UQ%3A2%3A1712561125%3A-1%3A5918",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
         "key": "zsh",
@@ -86,17 +41,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
-        "key": "locale",
-        "value": "en_US",
+        "key": "dpr",
+        "value": "2.1988937854766846",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
         "key": "vpd",
@@ -104,16 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2461%3Btimestamp%3A1712561215",
+        "key": "m_pixel_ratio",
+        "value": "2",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-08T07:27:00.420Z",
-        "lastAccessed": "2024-04-08T07:27:00.420Z"
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x668",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "fr",
+        "value": "00vSHBDf2JX353j2b.AWVBU8pHLclHlKd6_jD-XQ101JQ.BmE5t-..AAA.0.0.BmFVw1.AWUBXASsBjQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "xs",
+        "value": "36%3ALfdSf4HXWVnHpQ%3A2%3A1712675895%3A-1%3A10314",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "locale",
+        "value": "vi_VN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2462%3Btimestamp%3A1712675897",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-09T15:18:32.182Z",
+        "lastAccessed": "2024-04-09T15:18:32.182Z"
     }
-      ]
+]
