--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "ps_l",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "sb",
@@ -41,17 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "fr",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "c_user",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "xs",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "m_page_voice",
@@ -86,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x804",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "locale",
@@ -104,17 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2464%3Btimestamp%3A1713098445",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     },
     {
         "key": "vpd",
@@ -122,7 +95,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:41:11.334Z",
-        "lastAccessed": "2024-04-14T12:41:11.334Z"
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.9240320920944214",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
+    },
+    {
+        "key": "wd",
+        "value": "892x1739",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2464%3Btimestamp%3A1713099316",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T12:55:25.995Z",
+        "lastAccessed": "2024-04-14T12:55:25.995Z"
     }
 ]
