--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100091958496925%22%3A%22u8251rNE%22%7D",
+        "value": "%7B%22100091958496925%22%3A%22u8251rNE%22%2C%2261553710430834%22%3A%22IVT59Hyx%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "ps_l",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "sb",
@@ -41,53 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
-    },
-    {
-        "key": "fr",
-        "value": "0VXbh84Nvc3lPmWk6.AWWnBGQAFxakQkplGvXWHWMTr8s.BmG85X..AAA.0.0.BmG87C.AWVduX6a5tE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100091958496925",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
-    },
-    {
-        "key": "xs",
-        "value": "13%3AzpSTbVceeQwHpg%3A2%3A1713098435%3A-1%3A5918",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "100091958496925",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "vpd",
@@ -95,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "dpr",
@@ -104,25 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
+    },
+    {
+        "key": "fr",
+        "value": "0VXbh84Nvc3lPmWk6.AWW1c20LaTtIsAkkxgvELEWM6dc.BmG85X..AAA.0.0.BmG9QV.AWU6bdCZ4OQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
+    },
+    {
+        "key": "xs",
+        "value": "10%3AKO0GOsP3GfHPDg%3A2%3A1713099801%3A-1%3A5946",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "wd",
-        "value": "892x1739",
+        "value": "412x804",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
+    },
+    {
+        "key": "locale",
+        "value": "vi_VN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2464%3Btimestamp%3A1713099316",
+        "value": "v2%3Bclient_version%3A2464%3Btimestamp%3A1713099881",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-14T12:55:25.995Z",
-        "lastAccessed": "2024-04-14T12:55:25.995Z"
+        "creation": "2024-04-14T13:06:53.310Z",
+        "lastAccessed": "2024-04-14T13:06:53.310Z"
     }
 ]
