--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
         ""
     ],
     "UNSENTVIP": [
-        "61557122355666",
+        "100006985062493",
         "",
         "",
         "",
@@ -40,12 +40,12 @@
         ""
     ],
     "GOD": [
-        "",
+        "100006985062493",
         "",
         ""
     ],
     "ADMINBOT": [
-        "61557122355666",
+        "100006985062493",
         "",
         "",
         "",
@@ -58,7 +58,7 @@
     "OWNER": "Ali Jan",
     "AGE": "21",
     "GENDER": "𝗠𝗮𝗟𝗲",
-    "FACEBOOK": "https://https://www.facebook.com/pagalchhora143?mibextid=ZbWKwL?id=100038374310301",
+    "FACEBOOK": "https://https://www.facebook.com/100006985062493",
     "AutoOffBot": "disable",
     "AutoOffBotStartSleep": "disable",
     "AutoOffBotSendMessage": "Bye everyone. i need to sleep i'll be right back at 5:00AM 🥰",
