--- a/config.json
+++ b/config.json
@@ -55,7 +55,7 @@
         "",
         ""
     ],
-    "OWNER": "Ali Jan",
+    "OWNER": "Ali Jaan",
     "AGE": "21",
     "GENDER": "𝗠𝗮𝗟𝗲",
     "FACEBOOK": "https://https://www.facebook.com/100006985062493",
