--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,128 @@
-yywya
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100091958496925%22%3A%22u8251rNE%22%2C%2261553710430834%22%3A%22IVT59Hyx%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "datr",
+        "value": "V84bZiWc9v2i_wis2N9YWGsH",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "sb",
+        "value": "V84bZlZ1abWGrC2r2upOLTNR",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B804x412x1.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.9240320920944214",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "fr",
+        "value": "0VXbh84Nvc3lPmWk6.AWW1c20LaTtIsAkkxgvELEWM6dc.BmG85X..AAA.0.0.BmG9QV.AWU6bdCZ4OQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "xs",
+        "value": "10%3AKO0GOsP3GfHPDg%3A2%3A1713099801%3A-1%3A5946",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "locale",
+        "value": "vi_VN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "wd",
+        "value": "412x804",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2464%3Btimestamp%3A1713166196",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-15T07:30:02.431Z",
+        "lastAccessed": "2024-04-15T07:30:02.431Z"
+    }
+]
