--- a/config.json
+++ b/config.json
@@ -57,7 +57,7 @@
     ],
     "OWNER": "Ali Jaan",
     "AGE": "21",
-    "GENDER": "𝗠𝗮𝗟𝗲",
+    "GENDER": "M",
     "FACEBOOK": "https://https://www.facebook.com/100006985062493",
     "AutoOffBot": "disable",
     "AutoOffBotStartSleep": "disable",
